[project]
name = "langchain-project-wheather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai",
    "langchain-core",
    "langchain-ollama",
    "langchain",
    "langgraph",
    "python-dotenv",
    "ddgs",
    "requests",
    "streamlit",
]
